fixed strapi build

--- a/nginx/nginx_configuration.conf
+++ b/nginx/nginx_configuration.conf
@@ -7,8 +7,8 @@ http {
     server {
         listen 3000 ssl;
         server_name cristianpompey.com;
-        ssl_certificate /app/.ssl/cert.pem;
-        ssl_certificate_key /app/.ssl/key.pem;
+        ssl_certificate /app/.s/cert.pem;
+        ssl_certificate_key /app/.s/key.pem;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers   HIGH:!aNULL:!MD5;
 
