--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@testing-library/user-event": "^13.5.0",
     "ckeditor5": "^45.0.0",
     "ckeditor5-premium-features": "^45.0.0",
+    "dotenv": "^16.5.0",
     "husky": "^9.1.7",
     "material-ui-popup-state": "^5.3.6",
     "react": "^19.1.0",
