--- a/nginx/nginx_configuration.conf
+++ b/nginx/nginx_configuration.conf
@@ -10,10 +10,11 @@ http {
         location / {
             root   /app;
             index  index.html;
-            try_files $uri $uri/ =404;
+            # try_files $uri $uri/ =404;
+            try_files $uri $uri/ /index.html;
         }
 
-	location ~^/(api|media)/ {
+    location ~^/(api|media|uploads)/ {
             rewrite ^(/media)//+ /media/ break;
             proxy_pass http://cms:1337;
             proxy_http_version 1.1;
