--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -11,7 +11,7 @@
 # production
 /build
 replace_strapi_api_key
-# /frontend/src/GlobalUtilities/globals.js
+/frontend/src/GlobalUtilities/globals.js
 
 # misc
 .DS_Store
