--- a/nginx/nginx_configuration.conf
+++ b/nginx/nginx_configuration.conf
@@ -24,5 +24,40 @@ http {
      }
     }
 
+    # New HTTPS server that forwards to port 3000
+    server {
+        listen 443 ssl; 
+        server_name www.cristian.pompey.linushome.com;
+
+        # SSL Certificate configuration
+        ssl_certificate /app/.s/cert.pem;
+        ssl_certificate_key /app/.s/key.pem;
+
+        # SSL Security settings
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384;
+        ssl_prefer_server_ciphers on;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+
+        # Forward all traffic to the HTTP server on port 3000
+        location / {
+            proxy_pass http://127.0.0.1:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto https;
+            proxy_set_header X-Forwarded-Port 443;
+        }
+    }
+
+    # Optional: HTTP to HTTPS redirect
+    server {
+        listen 80;
+        server_name your-domain.com www.your-domain.com;
+        return 301 https://$server_name$request_uri;
+    }
+    
     
 }
