--- a/nginx/nginx_configuration_prod.conf
+++ b/nginx/nginx_configuration_prod.conf
@@ -54,19 +54,19 @@ http {
     }
 
     # Optional
-    # server {
-    #     listen 80;
-    #     server_name www.cristian.pompey.linushome.com;
+    server {
+        listen 80;
+        server_name www.cristian.pompey.linushome.com;
 
-    #     # redirect to http server
-    #     location / {
-    #         proxy_pass http://localhost:3000; # Forward requests to a server running on port 3000
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #     }
-    # }
+        # redirect to http server
+        location / {
+            proxy_pass http://localhost:3000; # Forward requests to a server running on port 3000
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
 
     
     
