--- a/nginx/dockerfile
+++ b/nginx/dockerfile
@@ -4,7 +4,12 @@ WORKDIR /app
 
 COPY build .
 
-RUN apt-get update && apt-get install -y gettext-base
+RUN apt-get update && apt-get install -y gettext-base python3 python3-dev python3-venv libaugeas-dev gcc
+RUN python3 -m venv /opt/certbot/
+RUN /opt/certbot/bin/pip install --upgrade pip
+RUN /opt/certbot/bin/pip install certbot certbot-nginx
+RUN ln -s /opt/certbot/bin/certbot /usr/bin/certbot
+
 
 COPY nginx_configuration_prod.conf /etc/nginx/nginx.conf
 
