--- a/nginx/dockerfile
+++ b/nginx/dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY build .
 
-RUN apt-get update && apt-get install -y gettext-base python3 python3-dev python3-venv libaugeas-dev gcc
+RUN apt-get update && apt-get install -y gettext-base python3 python3-dev python3-venv libaugeas-dev gcc cron
 RUN python3 -m venv /opt/certbot/
 RUN /opt/certbot/bin/pip install --upgrade pip
 RUN /opt/certbot/bin/pip install certbot certbot-nginx
