--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,10 @@ services:
     ports:
       - "3000:3000"
       - "443:443"
-      # - "80:80"
+      - "80:80"
     volumes:
       - ~/.ssl:/app/.s
+      - ~/nginx_logs:/var/log/nginx/
     networks:
       - mynetwork
 
@@ -22,7 +23,18 @@ services:
       - "1337:1337"
     networks:
       - mynetwork
-    
+
+  goaccess:
+    image: allinurl/goaccess:latest
+    volumes:
+      - ./nginx_logs:/srv/logs:ro # Mount Nginx logs read-only
+      - ./goaccess_reports:/var/www/html # For HTML reports
+    ports:
+      - "7890:7890" # Port for real-time HTML reports
+    command: /srv/logs/access.log --log-format=COMBINED -o /var/www/html/index.html --real-time-html --port=7890
+    depends_on:
+      - nginx
+      - cms
 networks:
   mynetwork:
     driver: bridge
