--- a/nginx/dockerfile
+++ b/nginx/dockerfile
@@ -9,7 +9,7 @@ RUN python3 -m venv /opt/certbot/
 RUN /opt/certbot/bin/pip install --upgrade pip
 RUN /opt/certbot/bin/pip install certbot certbot-nginx
 RUN ln -s /opt/certbot/bin/certbot /usr/bin/certbot
-RUN echo "0 0,12 * * * root /opt/certbot/bin/python -c 'import random; import time; time.sleep(random.random() * 3600)' && sudo certbot renew -q" | sudo tee -a /etc/crontab > /dev/null
+RUN echo "0 0,12 * * * root /opt/certbot/bin/python -c 'import random; import time; time.sleep(random.random() * 3600)' &&  certbot renew -q" | tee -a /etc/crontab > /dev/null
 
 COPY nginx_configuration_prod.conf /etc/nginx/nginx.conf
 
