add goaccess route

--- a/nginx/nginx_configuration_prod.conf
+++ b/nginx/nginx_configuration_prod.conf
@@ -22,6 +22,15 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
      }
+
+     location /report.html {
+            allow 100.121.129.41; 
+            allow 100.126.96.95;
+            deny all;
+            root /app;
+            index report.html;
+            try_files $uri $uri/ /report.html;
+        }
     }
 
     
@@ -58,9 +67,9 @@ http {
         listen 80;
         server_name www.cristian.pompey.linushome.com;
 
-        # redirect to http server
+        # redirect to https server
         location / {
-            proxy_pass http://localhost:3000; # Forward requests to a server running on port 3000
+            proxy_pass http://localhost:443; # Forward requests to a server running on port 443
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
