--- a/nginx/dockerfile
+++ b/nginx/dockerfile
@@ -4,14 +4,9 @@ WORKDIR /app
 
 COPY build .
 
-RUN apt-get update && apt-get install -y gettext-base python3 python3-dev python3-venv libaugeas-dev gcc cron
-RUN python3 -m venv /opt/certbot/
-RUN /opt/certbot/bin/pip install --upgrade pip
-RUN /opt/certbot/bin/pip install certbot certbot-nginx
-RUN ln -s /opt/certbot/bin/certbot /usr/bin/certbot
-RUN echo "0 0,12 * * * root /opt/certbot/bin/python -c 'import random; import time; time.sleep(random.random() * 3600)' &&  certbot renew -q" | tee -a /etc/crontab > /dev/null
+RUN apt-get update && apt-get install -y gettext-base
 
-COPY nginx_configuration_prod.conf /etc/nginx/nginx.conf
+COPY nginx_configuration.conf /etc/nginx/nginx.conf
 
 CMD ["nginx", "-g", "daemon off;"]
 
