--- a/nginx/nginx_configuration_prod.conf
+++ b/nginx/nginx_configuration_prod.conf
@@ -4,6 +4,11 @@ http {
     default_type application/octet-stream;
     merge_slashes on;
 
+    # Trust proxy headers from localhost (the HTTPS server)
+    set_real_ip_from 127.0.0.1;
+    real_ip_header X-Forwarded-For;
+    real_ip_recursive on;
+    
     server {
         listen 3000;
         
@@ -69,7 +74,7 @@ http {
 
         # redirect to https server
         location / {
-            proxy_pass http://localhost:443; # Forward requests to a server running on port 443
+            proxy_pass http://localhost:3000; # Forward requests to a server running on port 443
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
